src/objects/Cambios_a_Cita_Manual_Motor__mdt.object
<CustomObject>
    <fields>
        <fullName>CCM_CAS_Urgencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCM_DEC_Tiempo__c</fullName>
        <description>Horas si son no urgentes y minutos si es urgencia</description>
        <label>Tiempo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCM_SEL_Franja_Horaria__c</fullName>
        <label>Franja Horaria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00-02</fullName>
                </value>
                <value>
                    <fullName>02-04</fullName>
                </value>
                <value>
                    <fullName>04-06</fullName>
                </value>
                <value>
                    <fullName>06-08</fullName>
                </value>
                <value>
                    <fullName>08-10</fullName>
                </value>
                <value>
                    <fullName>10-12</fullName>
                </value>
                <value>
                    <fullName>12-14</fullName>
                </value>
                <value>
                    <fullName>14-16</fullName>
                </value>
                <value>
                    <fullName>16-18</fullName>
                </value>
                <value>
                    <fullName>18-20</fullName>
                </value>
                <value>
                    <fullName>20-22</fullName>
                </value>
                <value>
                    <fullName>22-00</fullName>
                </value>
                <value>
                    <fullName>Todas</fullName>
                    <default>true</default>
                    <label>Todas</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCM_TXT_CP__c</fullName>
        <label>CP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_TXT_Gremio__c</fullName>
        <label>Gremio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_TXT_Identificador_CIA__c</fullName>
        <label>Identificador de la compañía</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_TXT_Suceso__c</fullName>
        <label>Suceso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cambio a Cita Manual Motor</label>
    <pluralLabel>Cambios a Cita Manual Motor</pluralLabel>
</CustomObject>